# 2020RobotCode

./: .gitignore  .gitmodules  Jenkinsfile  cross_build_ros.sh  deploy.sh  deploy_rio_build.sh  rio_bashrc.sh  roborio_install_ros.sh  safe_search.sh  setup_ROS.sh  setup_environment.sh  test_bag.sh
common/: CMakeLists.txt  GoalDetector.cpp  GoalDetector.hpp  Utilities.cpp  Utilities.hpp  branch_and_bound.hpp  goal_detect.cpp  hungarian.cpp  hungarian.hpp  objtype.cpp  objtype.hpp  test_file.cpp  track3d.cpp
docker/: docker-run-usb
field_map/: 2020field.cpp
jetson_setup/: can_up.sh  master.sh  master_launch.service
zebROS_ws/: ROSBag.sh  ROSJetsonMaster.sh  ROSJetsonNano.sh  ROSJetsonTestSlave.sh  ROSJetsonXavier.sh  ROSStandard.sh  ROSTurtlebot.sh  auto_start.sh  command_aliases.sh  cross_build.sh  joy_launch.sh  native_build.sh  rostoolchain.cmake  win_native_build.sh
zebROS_ws/src/: .gitignore  .rosinstall
zebROS_ws/src/arvision/: CMakeLists.txt  package.xml
zebROS_ws/src/as726x_controllers/: CMakeLists.txt
zebROS_ws/src/base_trajectory/: CMakeLists.txt  package.xml
zebROS_ws/src/behavior_actions/: CMakeLists.txt
zebROS_ws/src/behaviors/: CMakeLists.txt  package.xml
zebROS_ws/src/cancoder_controller/: CMakeLists.txt  package.xml
zebROS_ws/src/canifier_controller/: CMakeLists.txt  package.xml
zebROS_ws/src/cmake_modules/: CMakeOpt.cmake
zebROS_ws/src/color_detection/: CMakeLists.txt  package.xml
zebROS_ws/src/color_spin/: CMakeLists.txt  package.xml
zebROS_ws/src/controllers_2019/: controllers_2019_plugins.xml
zebROS_ws/src/controllers_2020/: CMakeLists.txt  controllers_2020_plugins.xml  package.xml
zebROS_ws/src/controllers_2020_msgs/: CMakeLists.txt  package.xml
zebROS_ws/src/field_description/: CMakeLists.txt  package.xml
zebROS_ws/src/field_obj_tracker/: CMakeLists.txt
zebROS_ws/src/frc_msgs/: CMakeLists.txt
zebROS_ws/src/goal_detection/: CMakeLists.txt
zebROS_ws/src/laser_targets/: CMakeLists.txt
zebROS_ws/src/opencv_test/: CMakeLists.txt  package.xml
zebROS_ws/src/path_follower/: CMakeLists.txt  package.xml
zebROS_ws/src/path_follower_msgs/: CMakeLists.txt  package.xml
zebROS_ws/src/pf_localization/: CMakeLists.txt  package.xml
zebROS_ws/src/pixy_get_lines/: CMakeLists.txt
zebROS_ws/src/ros_control_boilerplate/: CMakeLists.txt  frcrobot_gazebosim_plugins.xml  package.xml
zebROS_ws/src/ros_control_boilerplate/config/: 2019_compbot_base_jetson.yaml  2019_compbot_base_rio.yaml  2019_falconbot_base_rio.yaml  2019_gazebobot_offsets.yaml  2019_swerve_drive.yaml  2020_compbot_base_jetson.yaml  2020_compbot_base_rio.yaml  2020_shooter_params.yaml  2020_swerve_drive.yaml  diff_drive.yaml  indexer_riab_jetson.yaml  indexer_riab_rio.yaml  robot_in_a_box_jetson.yaml  robot_in_a_box_rio.yaml  shooter_riab_jetson.yaml  shooter_riab_rio.yaml  test_oneshot_jetson.yaml  xavier_base.yaml  xavier_offsets.yaml  xavier_swerve_drive.yaml
zebROS_ws/src/ros_control_boilerplate/include/ros_control_boilerplate/: frc_robot_interface.h  frcrobot_gazebosim_interface.h  frcrobot_hw_interface.h  frcrobot_phoenixsim_interface.h  frcrobot_sim_interface.h  nextVelocity.h  tracer.h
zebROS_ws/src/ros_control_boilerplate/launch/: diff_drive_test.launch  indexer_riab_combined.launch  indexer_riab_jetson.launch  indexer_riab_rio.launch  robot_in_a_box_jetson.launch  robot_in_a_box_rio.launch  shooter_riab_jetson.launch  shooter_riab_rio.launch
zebROS_ws/src/ros_control_boilerplate/src/: AS726x.cpp  ctre_test.cpp  dummy_wpilib_common.cpp  dummy_wpilib_frc_robot_interface.cpp  dummy_wpilib_hw.cpp  error_queue.cpp  frc_robot_interface.cpp  frcrobot_gazebosim_interface.cpp  frcrobot_hw_interface.cpp  frcrobot_hw_main.cpp  frcrobot_phoenixsim_interface.cpp  frcrobot_phoenixsim_main.cpp  frcrobot_sim_interface.cpp  frcrobot_sim_main.cpp  nano_nx_dio_hal.cpp  nano_nx_i2c_hal.cpp  nano_nx_spi_hal.cpp  q_to_rpy.cpp  rev_convert.cpp
zebROS_ws/src/rqt_subscriber/: CMakeLists.txt  package.xml  plugin.xml  setup.py
zebROS_ws/src/rqt_subscriber/resource/: Subscriber.ui
zebROS_ws/src/rqt_subscriber/scripts/: rqt_subscriber
zebROS_ws/src/rqt_subscriber/src/rqt_subscriber/: subscriber.py  subscriber_tree_model.py  subscriber_tree_widget.py  subscriber_widget.py
zms-training/: CMakeLists.txt  decomp_zms.cpp
(+331 files in other folders)
