<?xml version="1.0"?>
<package format="2">
  <name>ros_control_boilerplate</name>
  <version>0.4.1</version>
  <description>Simple simulation interface and template for setting up a hardware interface for ros_control</description>

  <author email="programmers@team900.org"></author>
  <maintainer email="programmers@team900.org"></maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>talon_interface</depend>
  <depend>message_runtime</depend>
  <depend>frc_interfaces</depend>
  <depend>frc_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/frcrobot_gazebosim_plugins.xml"/>
  </export>
</package>
