<package format="3">
  <name>rqt_subscriber</name>
  <version>0.4.8</version>
  <description>rqt_subscriber provides a GUI plugin for subscribing to arbitrary messages with fixed or computed field values.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_subscriber</url>
  <url type="repository">https://github.com/ros-visualization/rqt_subscriber</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_subscriber/issues</url>

  <author>Dorian Scholzi, Cindy Zhu edited rqt_publisher for this</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend version_gte="1.9.49">rosmsg</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
